Add Metaspace trend summary